# cargo-version-bumped-check

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml  package-lock.json  package.json
.github/workflows/: hello.yml  self-running.yml
src/: index.ts
